--- a/custom_components/localtuya/translations/pt-BR.json
+++ b/custom_components/localtuya/translations/pt-BR.json
@@ -140,113 +140,113 @@
                 }
             },
             "configure_entity": {
-                "title": "Configure entity",
-                "description": "Please fill out the details for {entity} with type {platform}. All settings (except for `Type` and `ID`) can be changed from the `Configure` page later.",
+                "title": "Configurar entidade",
+                "description": "Por favor, preencha os detalhes para {entity} com o tipo {platform}. Todas as configurações (exceto `Type` e `ID`) podem ser alteradas na página `Configurar` mais tarde.",
                 "data": {
-                    "id": "DP ID",
-                    "friendly_name": "Friendly name for Entity",
-                    "current": "Current",
-                    "current_consumption": "Current Consumption",
-                    "voltage": "Voltage",
-                    "commands_set": "Open_Close_Stop Commands Set",
-                    "positioning_mode": "Positioning mode",
-                    "current_position_dp": "Current Position (for *position* mode only)",
-                    "set_position_dp": "Set Position (for *position* mode only)",
-                    "stop_switch_dp": "(Optional) Stop switch (if the cover has continue command?)",
-                    "position_inverted": "Invert 0-100 position (for *position* mode only)",
-                    "span_time": "Full opening time, in secs. (for *timed* mode only)",
-                    "unit_of_measurement": "(Optional) Unit of Measurement",
-                    "device_class": "(Optional) Device Class",
-                    "state_class": "(Optional) State Class",
-                    "scaling": "(Optional) Scaling Factor",
-                    "state_on": "On Value",
-                    "state_off": "Off Value",
-                    "powergo_dp": "Power DP (usually 25 or 2)",
-                    "idle_status_value": "Idle Status (comma-separated)",
-                    "returning_status_value": "Returning Status (comma-separated)",
-                    "docked_status_value": "Docked Status (comma-separated)",
-                    "fault_dp": "Fault DP (usually 11)",
-                    "battery_dp": "Battery status DP (usually 14)",
-                    "mode_dp": "Mode DP ",
-                    "modes": "Modes list",
-                    "return_mode": "Return home mode",
-                    "fan_speed_dp": "(Optional) Fan speeds DP",
-                    "fan_speeds": "Fan speeds list (comma-separated)",
-                    "clean_time_dp": "Clean Time DP (usually 33)",
-                    "clean_area_dp": "Clean Area DP (usually 32)",
-                    "clean_record_dp": "Clean Record DP (usually 34)",
-                    "locate_dp": "Locate DP (usually 31)",
-                    "pause_dp":"Pause DP",
-                    "paused_state": "Pause state (pause, paused, etc)",
-                    "stop_status": "Stop status",
-                    "brightness": "Brightness (only for white color)",
-                    "brightness_lower": "Brightness Lower Value",
-                    "brightness_upper": "Brightness Upper Value",
-                    "color_temp": "Color Temperature",
-                    "color_temp_reverse": "Reverse Color Temperature?",
-                    "color": "Color",
-                    "color_mode": "Color Mode aka Work Mode",
-                    "color_temp_min_kelvin": "Minimum Color Temperature in K",
-                    "color_temp_max_kelvin": "Maximum Color Temperature in K",
-                    "music_mode": "Music mode available?",
-                    "scene": "Scene",
-                    "scene_values": "(Optional) Scene values",
-                    "select_options": "Select options values",
-                    "fan_speed_control": "Fan Speed Control DP",
-                    "fan_oscillating_control": "Fan Oscillating Control DP",
-                    "fan_speed_min": "minimum fan speed integer",
-                    "fan_speed_max": "maximum fan speed integer",
-                    "fan_speed_ordered_list": "Fan speed list (overrides speed min/max), separate entries by comma ','",
-                    "fan_direction":"Fan Direction DP",
-                    "fan_direction_forward": "Forward DP string",
-                    "fan_direction_reverse": "Reverse DP string",
-                    "fan_dps_type": "DP value type",
-                    "current_temperature_dp": "Current Temperature",
-                    "target_temperature_dp": "Target Temperature",
-                    "temperature_step": "(Optional) Temperature Step",
-                    "min_temperature": "Min Temperature",
-                    "max_temperature": "Max Temperature",
-                    "precision": "Precision (optional, for DPs values)",
-                    "target_precision": "Target Precision (optional, for DP values)",
-                    "temperature_unit": "(Optional) Temperature Unit",
-                    "hvac_mode_dp": "(Optional) HVAC Mode DP",
-                    "hvac_mode_set": "(Optional) HVAC Modes",
-                    "hvac_add_off": "(Optional) Include `OFF` in HVAC Modes",
-                    "hvac_action_dp": "(Optional) HVAC Current Action DP",
-                    "hvac_action_set": "(Optional) HVAC Actions",
-                    "preset_dp": "(Optional) Presets DP",
-                    "preset_set": "(Optional) Presets",
-                    "fan_speed_list": "(Optional) Fan supported speeds, separate entries by comma ','",
-                    "eco_dp": "(Optional) Eco DP",
-                    "eco_value": "(Optional) Eco value",
-                    "heuristic_action": "(Optional) Enable heuristic action",
-                    "dps_default_value": "(Optional) Default value when un-initialised",
-                    "restore_on_reconnect": "Restore the last value set in Home Assistant after lost connection?",
-                    "min_value": "Minimum Value",
-                    "max_value": "Maximum Value",
-                    "step_size": "Minimum increment between numbers",
-                    "is_passive_entity": "Passive entity? (requires integration to send initialisation value)",
-                    "entity_category": "Show the entity in this category",
-                    "humidifier_available_modes": "(Optional) Available modes in the device",
-                    "humidifier_current_humidity_dp": "(Optional) Current Humidity DP",
-                    "humidifier_mode_dp": "(Optional) Set mode DP",
-                    "humidifier_set_humidity_dp": "(Optional) Set Humidity DP",
-                    "min_humidity": "Set the minimum supported humidity",
-                    "max_humidity": "Set the maximum supported humidity",
-                    "alarm_supported_states": "States supported by the device",
-                    "receive_dp":"Receiving signals DP. (default is 202)",
-                    "key_study_dp":"(Optional) Key Study DP (usually 7)"
+                    "id": "PD ID",
+                    "friendly_name": "Nome amigável para a Entidade",
+                    "current": "Corrente",
+                    "current_consumption": "Consumo Atual",
+                    "voltage": "Tensão",
+                    "commands_set": "Conjunto de Comandos Abrir_Fechar_Parar (Open_Close_Stop)",
+                    "positioning_mode": "Modo de posicionamento",
+                    "current_position_dp": "Posição Atual (Somente para o modo *posição*)",
+                    "set_position_dp": "Definir Posição (Somente para o modo *posição*)",
+                    "stop_switch_dp": "(Opcional) Interruptor de parada (Se a cobertura tiver comando contínuo?)",
+                    "position_inverted": "Inverter posição 0-100 (somente para o modo *posição*)",
+                    "span_time": "Tempo total de abertura, em segundos. (somente para o modo *temporizado*)",
+                    "unit_of_measurement": "(Opcional) Unidade de Medida",
+                    "device_class": "(Opcional) Classe do Dispositivo",
+                    "state_class": "(Opcional) Classe do Estado",
+                    "scaling": "(Opcional) Fator de Escala",
+                    "state_on": "Valor para Ligado",
+                    "state_off": "Valor para Desligado",
+                    "powergo_dp": "DP de Potência (Geralmente 25 ou 2)",
+                    "idle_status_value": "Estado de Ocioso (Separados por vírgula)",
+                    "returning_status_value": "Estado de Retorno (Separados por vírgula)",
+                    "docked_status_value": "Estado de Estacionado (Separados por vírgula)",
+                    "fault_dp": "DP de Falha (Geralmente 11)",
+                    "battery_dp": "DP de status da Bateria (Geralmente 14)",
+                    "mode_dp": "DP de Modo",
+                    "modes": "Lista de Modos",
+                    "return_mode": "Modo de Retorno para casa",
+                    "fan_speed_dp": "(Opcional) DP de velocidade do ventilador",
+                    "fan_speeds": "Lista de velocidades do ventilador (Separados por vírgula)",
+                    "clean_time_dp": "DP de Tempo de Limpeza (Geralmente 33)",
+                    "clean_area_dp": "DP de Área de Limpeza (Geralmente 32)",
+                    "clean_record_dp": "DP de Registro de Limpeza (Geralmente 34)",
+                    "locate_dp": "DP de Localização (Geralmente 31)",
+                    "pause_dp":"DP de Pausa",
+                    "paused_state": "Estado de Pausa (Pausado, etc.)",
+                    "stop_status": "Estado de Parada",
+                    "brightness": "Brilho (Somente para cor branca)",
+                    "brightness_lower": "Valor Inferior do Brilho",
+                    "brightness_upper": "Valor Superior do Brilho",
+                    "color_temp": "Temperatura da Cor",
+                    "color_temp_reverse": "Inverter Temperatura da Cor?",
+                    "color": "Cor",
+                    "color_mode": "Modo de Cor, também chamado de Modo de Trabalho",
+                    "color_temp_min_kelvin": "Temperatura Mínima da Cor em K",
+                    "color_temp_max_kelvin": "Temperatura Máxima da Cor em K",
+                    "music_mode": "Modo Música disponível?",
+                    "scene": "Cena",
+                    "scene_values": "(Opcional) Valores de Cena",
+                    "select_options": "Valores de opções de seleção",
+                    "fan_speed_control": "Controle de Velocidade do Ventilador DP",
+                    "fan_oscillating_control": "Controle de Oscilação do Ventilador DP",
+                    "fan_speed_min": "Velocidade mínima do ventilador (Número inteiro)",
+                    "fan_speed_max": "Velocidade máxima do ventilador (Número inteiro)",
+                    "fan_speed_ordered_list": "Lista de velocidades do ventilador (substitui mínimo/máximo), separar entradas por vírgula ','",
+                    "fan_direction":"Direção do Ventilador DP",
+                    "fan_direction_forward": "String para Frente DP",
+                    "fan_direction_reverse": "String para Reverso DP",
+                    "fan_dps_type": "Tipo de valor DP",
+                    "current_temperature_dp": "Temperatura Atual",
+                    "target_temperature_dp": "Temperatura Alvo",
+                    "temperature_step": "(Opcional) Incremento de Temperatura",
+                    "min_temperature": "Temperatura Mínima",
+                    "max_temperature": "Temperatura Máxima",
+                    "precision": "Precisão (opcional, para valores DP)",
+                    "target_precision": "Precisão Alvo (opcional, para valores DP)",
+                    "temperature_unit": "(Opcional) Unidade de Temperatura",
+                    "hvac_mode_dp": "(Opcional) DP de Modo HVAC",
+                    "hvac_mode_set": "(Opcional) Modos HVAC",
+                    "hvac_add_off": "(Opcional) Incluir `DESLIGADO` nos Modos HVAC",
+                    "hvac_action_dp": "(Opcional) DP de Ação Atual do HVAC",
+                    "hvac_action_set": "(Opcional) Ações do HVAC",
+                    "preset_dp": "(Opcional) DP de Predefinição",
+                    "preset_set": "(Opcional) Predefinições",
+                    "fan_speed_list": "(Opcional) Velocidades do ventilador suportadas, separar entradas por vírgula ','",
+                    "eco_dp": "(Opcional) DP de Eco",
+                    "eco_value": "(Opcional) Valor de Eco",
+                    "heuristic_action": "(Opcional) Habilitar ação heurística",
+                    "dps_default_value": "(Opcional) Valor padrão quando não inicializado",
+                    "restore_on_reconnect": "Restaurar o último valor definido no Home Assistant após perda de conexão?",
+                    "min_value": "Valor Mínimo",
+                    "max_value": "Valor Máximo",
+                    "step_size": "Incremento mínimo entre números",
+                    "is_passive_entity": "Entidade passiva? (necessita que a integração envie valor de inicialização)",
+                    "entity_category": "Mostrar a entidade nesta categoria",
+                    "humidifier_available_modes": "(Opcional) Modos disponíveis no dispositivo",
+                    "humidifier_current_humidity_dp": "(Opcional) DP de Umidade Atual",
+                    "humidifier_mode_dp": "(Opcional) Definir Modo DP",
+                    "humidifier_set_humidity_dp": "(Opcional) Definir Umidade DP",
+                    "min_humidity": "Definir a umidade mínima suportada",
+                    "max_humidity": "Definir a umidade máxima suportada",
+                    "alarm_supported_states": "Estados suportados pelo dispositivo",
+                    "receive_dp":"DP de Recepção de sinais. (o padrão é 202)",
+                    "key_study_dp":"(Opcional) DP de Estudo de Chave (geralmente 7)"
                 },
                 "data_description": {
-                    "hvac_mode_set":"Each line represents [ hvac_mode: device_value ] [Supported HVAC Modes](https://developers.home-assistant.io/docs/core/entity/climate/#hvac-modes)",
-                    "hvac_action_set":"Each line represents [ hvac_action: device_value ] [Supported HVAC Actions](https://developers.home-assistant.io/docs/core/entity/climate/#hvac-action)",
-                    "preset_set":"Each line represents [ device_value: friendly name ]",
-                    "scene_values":"Each line represents [ device_value: friendly name ]",
-                    "select_options":"Each line represents [ device_value: friendly name ]",
-                    "alarm_supported_states":"Each line represents [ supported state: device value ] [Supported States](https://developers.home-assistant.io/docs/core/entity/alarm-control-panel/#states)",
-                    "humidifier_available_modes":"Each line represents [ device_value: friendly name ]",
-                    "device_class": "Find out more about [Device Classes](https://www.home-assistant.io/integrations/homeassistant/#device-class)",
-                    "state_class": "Find out more about [State Classes](https://developers.home-assistant.io/docs/core/entity/sensor/#available-state-classes)"
+                    "hvac_mode_set":"Cada linha representa [ hvac_mode: device_value ] [Modos HVAC Suportados](https://developers.home-assistant.io/docs/core/entity/climate/#hvac-modes)",
+                    "hvac_action_set":"Cada linha representa [ hvac_action: device_value ] [Ações HVAC Suportadas](https://developers.home-assistant.io/docs/core/entity/climate/#hvac-action)",
+                    "preset_set":"Cada linha representa [ device_value: friendly name ]",
+                    "scene_values":"Cada linha representa [ device_value: friendly name ]",
+                    "select_options":"Cada linha representa [ device_value: friendly name ]",
+                    "alarm_supported_states":"Cada linha representa [ supported state: device value ] [Estados Suportados](https://developers.home-assistant.io/docs/core/entity/alarm-control-panel/#states)",
+                    "humidifier_available_modes":"Cada linha representa [ device_value: friendly name ]",
+                    "device_class": "Saiba mais sobre [Device Classes](https://www.home-assistant.io/integrations/homeassistant/#device-class)",
+                    "state_class": "Saiba mais sobre [State Classes](https://developers.home-assistant.io/docs/core/entity/sensor/#available-state-classes)"
                 }
             }
         }
